# datalens

./: .env.example  .gitignore  CLAUDE.md  Makefile  README.md  docker-compose.yml
.claude/commands/: datahub-poc.md
airflow/: Dockerfile  requirements.txt
airflow/dags/: dbt_run_dag.py  dbt_to_om_dag.py  om_profiling_dag.py  wayfair_mock_dag.py
api/: .dockerignore  Dockerfile  main.py  requirements.txt
api/routers/: _pagination.py  assessment.py  cdm.py  dq.py  health.py  mock.py  pipelines.py  sources.py
api/services/: airflow_client.py  assessment_service.py  om_client.py  trino_client.py
db/: init.sql
dbt_project/: .user.yml  dbt_project.yml  package-lock.yml  packages.yml  profiles.yml  requirements.txt
docs/: DATA-QUALITY.md  DEVELOPER-GUIDE.md  PRODUCT-OVERVIEW.md
frontend/: .dockerignore  Dockerfile  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
hive/: Dockerfile
ingestion/: wayfair_mock.py
profiling/: run_profile.py
retail-dbt-poc/: .env.example  .gitignore  Makefile  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
retail-dbt-poc/db/: create_databases.sh  schema.sql  seed.py
retail-dbt-poc/dbt_project/: dbt_project.yml  package-lock.yml  packages.yml  profiles.yml
retail-dbt-poc/dbt_project/models/profiling/: schema.yml
retail-dbt-poc/dbt_project/models/staging/: sources.yml
retail-dbt-poc/notebooks/: pipeline.ipynb
retail-dbt-poc/pipeline/: dbt_generator.py  llm_client.py  om_client.py
scripts/: bootstrap_om_tokens.sh  register_connectors.py  setup.sh  validate.sh
(+57 files in other folders)
