[project]
name = "retail-dbt-poc"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dbt-core>=1.9,<2.0",
    "dbt-postgres>=1.9,<2.0",
    "faker>=24.0",
    "httpx>=0.27",
    "ipykernel>=6.0",
    "ipywidgets>=8.0",
    "jupyter>=1.0",
    "matplotlib>=3.8",
    "nest-asyncio>=1.6",
    "notebook>=7.0",
    "pandas>=2.0",
    "psycopg2-binary>=2.9",
    "python-dotenv>=1.0",
    "pyyaml>=6.0",
    "requests>=2.31",
]
